fixing overflow:hidden on header

--- a/scss/src/main/resources/sass/reference/fragments/_header.scss
+++ b/scss/src/main/resources/sass/reference/fragments/_header.scss
@@ -3,6 +3,7 @@ header {
   background-color: $highlight;
   color: #CCC;
   line-height: 1em;
+  overflow: auto;
   @include border-radius(5px);
 
   a, a:visited, a:hover, a:link {
