--- a/scss/src/main/resources/sass/reference/fragments/_login.scss
+++ b/scss/src/main/resources/sass/reference/fragments/_login.scss
@@ -1,7 +1,3 @@
-header {
-  overflow: hidden;
-}
-
 #login-form {
   ul.select {
     width: 850px;
